<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Auth.LoginFragment"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        style="@style/loginCard"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/loginCardRadius">

        <LinearLayout
            style="@style/linearParent"
            android:layout_height="match_parent">

            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/login_title"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edtUsername"
                    style="@style/modifiedEditText"
                    android:maxLines="1"
                    android:drawableStart="@drawable/round_person_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:hint="@string/username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:text="@string/forgot_password"
                android:textColor="@color/material_dynamic_primary0"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnLogin"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login" />

            <TextView
                style="@style/parent"
                android:id="@+id/tvRegister"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/material_dynamic_primary0"
                android:text="@string/not_existed"
                android:layout_marginTop="@dimen/loginViewsMargin"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>