<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Auth.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegister"
        style="@style/loginCard"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/loginCardRadius">

        <LinearLayout
            style="@style/linearParent"
            android:layout_height="match_parent">

            <TextView
                style="@style/headerTextPrimary"
                android:text="@string/register"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/edtRegisterUsername"
                    style="@style/modifiedEditText"
                    android:maxLines="1"
                    android:drawableStart="@drawable/round_person_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:hint="@string/username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/edtPhone"
                    style="@style/modifiedEditText"
                    android:hint="@string/phone"
                    android:maxLines="1"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/edtRegisterPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/edtConfirmPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/confirm_password"
                    android:maxLines="1"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">
                <EditText
                    android:id="@+id/edtAddress"
                    style="@style/modifiedEditText"
                    android:maxLines="1"
                    android:drawableStart="@drawable/round_person_24"
                    android:drawablePadding="@dimen/textview_margin"
                    android:hint="@string/address"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:text="@string/register"
                app:backgroundTint="@null"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <TextView
                android:id="@+id/tvLogin"
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/material_dynamic_primary0"
                android:text="@string/existed"
                android:layout_marginTop="@dimen/loginViewsMargin"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
